alignmets fixed sidenavbar

--- a/src/app/quantum-mads/shared/top-nav-bar/top-nav-bar.component.scss
+++ b/src/app/quantum-mads/shared/top-nav-bar/top-nav-bar.component.scss
@@ -27,7 +27,8 @@
     background: linear-gradient( 312deg, rgba(204, 73, 166, 1) 12%, rgba(19, 161, 179, 1) 87%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 27px;
+    font-size: 24px;
+    font-weight: 500;
     text-align: center;
 }
 
@@ -178,7 +179,7 @@ html {
     width: 45px;
     height: 18px;
     border-radius: 5rem;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+    // box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .toggle-switch::before {
